# invite

./: AGENTS.md  CLI_API.md  README.md  main.py  pyproject.toml
invite/: __init__.py  cli.py
openrsvp_cli/: __init__.py  __main__.py  channels.py  client.py  config.py  config_cli.py  events.py  main.py  rsvps.py  utils.py
