[project]
name = "invite"
version = "0.1.0"
description = "Async Typer CLI for OpenRSVP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.4",
    "httpx>=0.28.1",
    "rich>=13.7.1",
    "tomli>=2.0.1",
]

[project.scripts]
invite = "openrsvp_cli.main:app"
openrsvp_cli = "openrsvp_cli.main:app"
openrsvp-cli = "openrsvp_cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
